--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,4 +38,4 @@ jobs:
         git diff --exit-code || exit 1
 
     - name: Run unit tests
-      run: go test -v ./...
+      run: go test -race -v ./...
