--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         # Minimum supported version (1.17) and the latest two
-        go-version: [1.17, 1.18, 1.19]
+        go-version: ['1.17', '1.19', '1.20']
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
 
@@ -27,7 +27,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Check formatting
-      if: matrix.go-version == '1.19' && matrix.platform == 'ubuntu-latest'
+      if: matrix.go-version == '1.20' && matrix.platform == 'ubuntu-latest'
       run: diff -u <(echo -n) <(go fmt $(go list ./...))
 
     - name: Run unit tests
